--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/img.png" alt="">
+    <img src="https://github.com/DurgeshImpulse/impulse2.0/blob/main/img/cweb.jpg" alt="">
 </body>
 </html>
